tests/rosetta/out/Dart/aks-test-for-primes.error
run error: exit status 254
../../tests/rosetta/out/Dart/aks-test-for-primes.dart:73:6: Error: 'main' is already declared in this scope.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/aks-test-for-primes.dart:49:6: Context: Previous declaration of 'main'.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/aks-test-for-primes.dart:14:59: Error: The argument type 'double' can't be assigned to the parameter type 'String'.
    coef = int.parse((((coef as num) * (i as num) as num) / (((p - (i as num) as num) + 1) as num)));
                                                          ^
../../tests/rosetta/out/Dart/aks-test-for-primes.dart:17:11: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      d = -(d as num);
          ^
../../tests/rosetta/out/Dart/aks-test-for-primes.dart:20:23: Error: The operator 'unary-' isn't defined for the class 'String'.
Try correcting the operator to an existing operator, or defining a 'unary-' operator.
      s = s + ' - ' + -(d as num).toString();
                      ^
../../tests/rosetta/out/Dart/aks-test-for-primes.dart:25:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) - 1;
                   ^
../../tests/rosetta/out/Dart/aks-test-for-primes.dart:43:68: Error: The argument type 'double' can't be assigned to the parameter type 'String'.
    c = int.parse((((c as num) * ((n - (i as num)) as num) as num) / (((i as num) + 1) as num)));
                                                                   ^
../../tests/rosetta/out/Dart/aks-test-for-primes.dart:44:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/aks-test-for-primes.dart:53:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    p = (p as num) + 1;
                   ^
../../tests/rosetta/out/Dart/aks-test-for-primes.dart:68:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    p = (p as num) + 1;
                   ^
../../tests/rosetta/out/Dart/aks-test-for-primes.dart:74:3: Error: Can't use 'main' because it is declared more than once.
  main();
  ^
../../tests/rosetta/out/Dart/aks-test-for-primes.dart:98:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/aks-test-for-primes.dart:127:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/aks-test-for-primes.dart:132:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/aks-test-for-primes.dart:136:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
